# combinatorial-choice-estimation

./: .gitattributes  .gitignore  COMBINED_GATHER_OPTIMIZATION.md  COMPREHENSIVE_REVIEW.md  FEATURE_TESTING_RESULTS.md  MESSAGE_TO_HPC_AGENT.md  MESSAGE_TO_HPC_AGENT_FINAL.md  Makefile  PACKAGE_REVIEW.md  README.md  add_submodules.sh  baseline_time.txt  benchmark_comm.sbatch  benchmark_comm_manager.py  benchmark_real_estimation.py  benchmark_warmstart.py  cleanup_mpi.sh  debug_1slack.py  debug_1slack_minimal.py  debug_DDCM  debug_case4.py  debug_column_generation_structures.py  debug_se_comparison.py  debug_se_sandwich_only.py  debug_se_simple.py  dev_setup.sh  discrete_choice.py  fast_test_check.sh  investigate_solver_difference.py  load_data_notebook.ipynb  notebook.ipynb  pricing_notebook.py  problem.md  pyproject.toml  quick_test_runner.sh  requirements.txt  run-gurobi.bash  run_all_benchmarks.sh  run_all_tests_with_timeout.sh  run_benchmark_no_sleep.sh  (+34 more)
Empirical_application/: Fox_Bajari_application.ipynb  Fox_Bajari_estimation.ipynb  bta_map.ipynb  retreive_data.ipynb
EstimationPipeline/: bundle_choice.py  config.yaml  initialize_master.py  mpi_runner  mpipy  quadratic_knapsack_equilibrium.py  requirements.txt  run-job.sbatch  test copy.py  test.py  to-do.txt
EstimationPipeline_v1/: bundle_choice.py  config.yaml  run-job.sbatch  utils.py
Estimation_notebooks/: QKP.ipynb  assignment_model_SFM.ipynb  assignment_model_v0.ipynb  assignment_model_v1.ipynb  bundled_choice_GS.ipynb  bundled_choice_SFM.ipynb  linear_knapsack_DP.ipynb
First_attempts/: CL_MLE_v0.ipynb
Fox&Bajari/: clean_data_notebook.ipynb  config.yaml  run_estimation.py
FoxBajari/: config.yaml  run-job.sbatch  run_estimation_v1.py
GMM_quad/: job-main.py  run-job.sbatch
GMM_quad_delta2/: job-main.py  run-gurobi.bash  run-job.sbatch
GMM_quad_delta4/: initialize_master.py  job-main.py  run-job.sbatch
GMM_quad_new/: initialize_master.py  job-main.py  master.py  pricing.py  run-job.sbatch  utilities.py
GMM_quad_new copy/: initialize_master.py  job-main.py  master.py
GMM_quad_new_test/: initialize_master.py  job-main.py  master.py  run-job.sbatch
GMM_quad_old/: initialize_master.py  job-main.py  master.py  pricing.py  run-job.sbatch  slurm-60032904.out  slurm-60119191.out  test.sbatch  utilities.py
GMM_quad_v1-100/: master.py  run-job.sbatch
GMM_quad_v1-50/: job-main.py  master.py  run-job.sbatch
GMM_quad_v2-50/: job-main.py  master.py  pricing.py  run-job.sbatch
GMM_quad_v3-200/: run-job.sbatch
Gurobi/: gurobi.lic  test_gurobi_license.ipynb
Regret_quad_delta2/: initialize_master.py  job-main.py  pricing.py  run-job.sbatch
SFM/: lovatz_extension.ipynb  lovatz_pytorch.ipynb
Scripts/: find_CE.py
bundlechoice/: FEATURE_PROPOSALS.md  __init__.py  _core.py  _initialization.py  base.py  comm_manager.py  config.py  config_profiles.py  config_service.py  constants.py  core.py  core_.py  data_manager.py  errors.py  feature_manager.py  oracles_manager.py  (+4 more)
bundlechoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1608 files in other folders)
