[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bundlechoice"
version = "0.2.0"  # Note: __version__ in bundlechoice/__init__.py is the source of truth
description = "Estimation toolkit for combinatorial discrete choice models"
authors = [{name = "Enzo Di Pasquale", email = "ed2189@nyu.edu"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "gurobipy>=11.0",
    "mpi4py>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mpi>=0.6",
]

[project.urls]
Homepage = "https://github.com/enzodipasquale/combinatorial-choice-estimation"
Repository = "https://github.com/enzodipasquale/combinatorial-choice-estimation"

[tool.setuptools.packages.find]
include = ["bundlechoice*"]
exclude = ["bundlechoice._legacy*", "bundlechoice.tests*"]
